# windows-registry

./: LICENSE  README.md  index.d.ts  index.js  native.js  package.json  pnpm-lock.yaml  tag-prebuild.js
.github/workflows/: ci.yml  release_package.yml
native/: Cargo.toml
native/src/: lib.rs
test/: index.js
